# Roverlad_ROS2_Pub

./: .gitignore  README.md
dashboard/: docker-compose.yaml
dashboard/config/: config.yaml
dashboard/static/: UIControl.js  cameraStream.js  configControls.js  control.css  index.html  nginx.conf  styles.css  videoControls.js  webAPIClient.js  webSocketClient.js
dashboard/static/maps/: map.css  map.html  navmap.js
dashboard/static/settings/: setting.css  setting.html  setting.js
dashboard/webRTCCV/: Dockerfile  cyclone.xml  docker-compose.yaml  load_config.py  micfinder.py  on_startup.sh  webRTCServer_host.py
dashboard/webRTCCV/ros2_ws/src/viz_interfaces/: CMakeLists.txt  package.xml
roverlad_vision/: Dockerfile  checkEnv.py  docker-compose.yaml  on_startup.sh
roverlad_vision/model/: yolo_test2.py
roverlad_vision/proj/src/roverlad_computerviz/: CMakeLists.txt  package.xml
roverlad_vision/proj/src/roverlad_computerviz/roverlad_computerviz/: CVSession.py  load_config.py  yoloDetectionLib.py  yolo_stream_node.py
src/ble_reader_py/: package.xml  setup.cfg  setup.py
src/ble_reader_py/ble_reader_py/: ble_node.py
src/roverlad_bringup/: CMakeLists.txt  package.xml
src/roverlad_bringup/config/: twist_mux.yaml
src/roverlad_bringup/launch/: master_launch_mapping.launch.py  master_launch_navigation.launch.py  roverlad_real.launch.py
src/roverlad_bringup/rviz/: rove_around.rviz
src/roverlad_bringup/src/roverlad_bringup/: commands_server.py
src/roverlad_controller/: CMakeLists.txt  package.xml
src/roverlad_controller/config/: roverlad_controllers.yaml
src/roverlad_controller/launch/: controller.launch.py
src/roverlad_controller/src/: controller_reader.cpp  simple_controller.cpp
src/roverlad_description/: CMakeLists.txt  package.xml
src/roverlad_description/launch/: display.launch.py  gazebo.launch.py
src/roverlad_description/meshes/: Caster.stl  IMU.stl  JetsonBrick.stl  LIDAR.stl  MainFrame.stl  Wheel_L.stl  Wheel_R.stl
src/roverlad_description/urdf/: roverlad.urdf.xacro  roverlad_gazebo.xacro  roverlad_ros2_control.xacro
src/roverlad_description/worlds/: default.sdf
src/roverlad_firmware/: CMakeLists.txt  package.xml  roverlad_interface.xml
src/roverlad_firmware/include/roverlad_firmware/: Kalman.hpp  MPU6050.hpp  MotorInfo.hpp  SerialReader.hpp  roverlad_interface.hpp
src/roverlad_firmware/launch/: hardware_interface.launch.py
src/roverlad_firmware/src/: Kalman.cpp  controller_teleop.cpp  rover_comms.cpp  roverlad_interface.cpp
src/roverlad_interfaces/: CMakeLists.txt  package.xml
src/roverlad_interfaces/action/: GetSpeed.action  ResetRos.action  SaveMap.action  SetSaveSpeeds.action  SetSpeed.action  SwitchMap.action
src/roverlad_interfaces/msg/: ControllerData.msg  RoverData.msg
src/roverlad_interfaces/srv/: GetMap.srv  GetMaps.srv  GetSpeedConfig.srv  SetInitialPose.srv
src/roverlad_localization/: CMakeLists.txt  package.xml
src/roverlad_localization/config/: amcl.yaml  ekf.yaml
src/roverlad_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/roverlad_mapping/: CMakeLists.txt  package.xml
src/roverlad_mapping/launch/: slam.launch.py
src/roverlad_mapping/maps/hall/: map.pgm  map.yaml
src/roverlad_mapping/maps/hall_lite/: map.pgm  map.yaml
src/roverlad_mapping/maps/kitchen/: map.pgm  map.yaml  map_olde.pgm  map_olde.yaml  map_recent.pgm  map_recent.yaml
src/roverlad_mapping/src/roverlad_mapping/: map_getter_server.py  slam_manage_server.py
src/roverlad_navigation/: CMakeLists.txt  package.xml
src/roverlad_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  planner_server.yaml
src/roverlad_navigation/launch/: navigation.launch.py
src/roverlad_navigation/src/roverlad_navigation/: config_node_server.py
src/viz_interfaces/: CMakeLists.txt
src/viz_interfaces/msg/: CvMsg.msg
src/viz_interfaces/srv/: SetRoverViz.srv
